--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -45,7 +45,7 @@
                                         <li><a href="#">TEAM</a></li>
                                         <li><a href="#">RECHARGE</a></li>
                                         <li><a href="#">CONTACT</a></li>
-
+                                        s
                                     </ul>
                                 </div>
                             </div>
@@ -201,20 +201,23 @@
             <div class="row">
                 <div class="button-group filters-button-group">
                     <button data-filter="*" class="button is-checked">All</button>
-                    <button data-filter=".app-design" class="button">App Design</button>
+                    <button data-filter=".app-design" class="button">Cafeteria System</button>
+                    <!--
                     <button data-filter=".ul-design" class="button">UI Design</button>
                     <button data-filter=".web-design" class="button">Web Design</button>
+                    -->
                 </div>
 
                 <div class="grid" style="position: relative; height: 1221.93px;">
                     <div class="portfolio-item app-design" style="position: absolute; left: 0px; top: 0px;">
                         <img alt="" src="img/portfolio1.jpg">
-                        <h3>THEME DESIGN</h3>
-                        <p>UI/UX</p>
+                        <h3>Cafeteria System</h3>
+                        <p>Billing Automation. Data securely stored in cloud.</p>
                         <div class="portfolio-text">
                             <a href="img/portfolio1.jpg"><i class="fa fa-search" aria-hidden="true"></i></a>
                         </div>
                     </div>
+                    <!--
                     <div class="portfolio-item ul-design" style="position: absolute; left: 386px; top: 0px;">
                         <img alt="" src="img/portfolio2.jpg">
                         <h3>THEME DESIGN</h3>
@@ -231,6 +234,7 @@
                             <a href="img/portfolio3.jpg"><i class="fa fa-search" aria-hidden="true"></i></a>
                         </div>
                     </div>
+
                     <div class="portfolio-item app-design" style="position: absolute; left: 0px; top: 372px;">
                         <img alt="" src="img/portfolio4.jpg">
                         <h3>THEME DESIGN</h3>
@@ -255,11 +259,13 @@
                             <a href="img/portfolio6.jpg"><i class="fa fa-search" aria-hidden="true"></i></a>
                         </div>
                     </div>
+                    -->
                 </div>
 
             </div>
         </div>
     </section>
+    <!--
     <section class="testimonial">
         <img src="img/textmonial-layer.png" alt="">
         <h2>TESTIMONIAL</h2>
@@ -314,6 +320,7 @@
             </div>
         </div>
     </section>
+    -->
     <section class="our-team">
         <h2>OUR TEAM</h2>
         <div class="about-icon">
@@ -327,8 +334,8 @@
                         <div class="hexagon one1">
                             <img src="img/team-member1.jpg" alt="">
                         </div>
-                        <h3>Teresa J. Gess</h3>
-                        <p>Designer</p>
+                        <h3>Aditya Ajay</h3>
+                        <p>Co-Founder</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-6">
@@ -337,10 +344,11 @@
                         <div class="hexagon one2">
                             <img src="img/team-member2.jpg" alt="">
                         </div>
-                        <h3>Aaron Abraham</h3>
-                        <p>Web Designer</p>
+                        <h3>Ayush Pratap Singh</h3>
+                        <p>Co-Founder</p>
                     </div>
                 </div>
+                <!--
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="hexagon1">
                         <img src="img/shepe-team-area.png" alt="">
@@ -361,6 +369,7 @@
                         <p>Web Designer</p>
                     </div>
                 </div>
+                -->
             </div>
             <div class="row">
                 <div class="col-md-12">
@@ -441,6 +450,7 @@
             </div>
         </div>
     </section>
+    <!--
     <section class="our-blog">
         <h2>OUR BLOG</h2>
         <div class="about-icon">
@@ -498,6 +508,7 @@
             </div>
         </div>
     </section>
+    -->
     <section class="footer-icon">
         <div class="container">
             <div class="row">
