--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>automations.digital</title>
+    <link rel="shortcut icon" href="{% static 'Home/img/favicon.ico' %}"/>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700|Open+Sans:400,600,700,800"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fenix:400,700|Open+Sans:400,600,700,800"
@@ -20,7 +21,10 @@
 </head>
 
 <body>
-<a href="#linktotop"></a>
+{% if msg %}
+    <script>alert("Message sent successfully. Expect a reply within 12 working hours.");</script>
+{% endif %}
+<a id="#linktotop"></a>
 <div class="wrapper">
     <header class="header">
         <div class="container">
@@ -33,19 +37,17 @@
                                     <h2><a href="./">automations.digital</a></h2>
                                 </div>
                             </div>
-
                             <div class="col-md-9 col-sm-12 col-xs-12">
-                                <div class="menu">
+                                <div class="menu" onmouseover="" style="cursor: pointer;">
                                     <ul class="nav navbar-nav">
-                                        <li class="active"><a href="#">HOME</a></li>
-                                        <li><a href="#">ABOUT</a></li>
-                                        <li><a href="#">SERVICES</a></li>
-                                        <li><a href="#">PORTFOLIO</a></li>
+                                        <li><a onclick="scrollAbout()">ABOUT</a></li>
+                                        <li><a onclick="scrollServices()">SERVICES</a></li>
+                                        <li><a onclick="scrollPort()">PORTFOLIO</a></li>
                                         <!--<li><a href="#">TESTIMONIAL</a></li>-->
-                                        <li><a href="#">TEAM</a></li>
+                                        <li><a onclick="scrollTeam()">TEAM</a></li>
                                         <li><a href="#">RECHARGE</a></li>
-                                        <li><a href="#">CONTACT</a></li>
-                                        s
+                                        <li><a onclick="scrollContact()">CONTACT</a></li>
+
                                     </ul>
                                 </div>
                             </div>
@@ -58,11 +60,13 @@
                 <div class="col-md-12">
                     <div class="header-carousal owl-carousel owl-theme">
                         <div class="item">
+                            <a name="#linktotop"></a>
+
                             <h4>WE ARE</h4>
                             <h2>An Automation Solutions Firm</h2>
                             <p>automations.digital provides scalable automation solutions with
-                                <br>great reliability and success rate. etc etc etc </p>
-                            <button><a href="contact">Contact Now</a></button>
+                                <br>great reliability. </p>
+                            <button><a onclick="scrollContact()">Contact Now</a></button>
                         </div>
                         <div class="item">
                             <h4>WE ARE</h4>
@@ -70,7 +74,7 @@
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                                 has
                                 <br>dummy text ever since the 1500s, Lorem Ipsum. </p>
-                            <button><a href="contact">Contact Now</a></button>
+                            <button><a onclick="scrollContact()">Contact Now</a></button>
                         </div>
                         <div class="item">
                             <h4>WE ARE</h4>
@@ -78,7 +82,7 @@
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                                 has
                                 <br>dummy text ever since the 1500s, Lorem Ipsum. </p>
-                            <button><a href="contact">Contact Now</a></button>
+                            <button><a onclick="scrollContact()">Contact Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -371,6 +375,7 @@
                 </div>
                 -->
             </div>
+            <!--
             <div class="row">
                 <div class="col-md-12">
                     <div class="two1 tom">
@@ -448,6 +453,7 @@
                     </div>
                 </div>
             </div>
+            -->
         </div>
     </section>
     <!--
@@ -509,6 +515,7 @@
         </div>
     </section>
     -->
+    <!--
     <section class="footer-icon">
         <div class="container">
             <div class="row">
@@ -531,6 +538,7 @@
             </div>
         </div>
     </section>
+    -->
     <section class="contact-area">
         <h2>CONTACT US</h2>
         <div class="about-icon">
@@ -541,15 +549,15 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="contact-part">
                         <h4><i class="fa fa-map-marker" aria-hidden="true"></i>OUR LOCATION</h4>
-                        <P>Amity Univerity, Sector 125, Noida, UP</P>
+                        <P>Amity University, Sector 125, Noida, UP</P>
                         <P>201301</P>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <div class="contact-part">
                         <h4><i class="fa fa-phone" aria-hidden="true"></i>call us now</h4>
-                        <p>+91-7761839403</p>
                         <p>+91-9990030362</p>
+                        <p>+91-7761839403</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4">
@@ -564,11 +572,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="contact-form">
-                        <form action="/contactform" method="post">
-                            <input type="text" placeholder="Name">
-                            <input type="email" placeholder="Email">
-                            <input type="text" placeholder="Subject">
-                            <textarea placeholder="Message"></textarea>
+                        <form action="/contactform/" method="post">
+                            <input type="text" name="n" placeholder="Name">
+                            <input type="email" name="e" placeholder="Email">
+                            <input type="text" name="sub" placeholder="Subject">
+                            <textarea name="msg" placeholder="Message"></textarea>
                             <input type="submit" value="Send">
                         </form>
                     </div>
@@ -586,7 +594,7 @@
                 </div>
                 <div class="col-md-4 col-sm-3 col-xs-4">
                     <div class="footer-logo">
-                        <p><a name="linktotop">automations.digital</a></p>
+                        <p><a href="./">automations.digital</a></p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-2">
@@ -595,14 +603,31 @@
                                 class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i
                                 class="fa fa-linkedin"
                                 aria-hidden="true"></i></a><a
-                                href="#"><i class="fa fa-behance" aria-hidden="true"></i></a><a href="#"><i
-                                class="fa fa-dribbble" aria-hidden="true"></i></a></p>
+                                href="#"></p>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 </div>
+<script>
+function scrollContact() {
+  window.scrollTo(4400,4400);
+}
+function scrollAbout() {
+    window.scrollTo(1000,1000);
+}
+function scrollServices() {
+    window.scrollTo(2000,2000);
+}
+function scrollPort() {
+    window.scrollTo(3100,3100);
+}
+function scrollTeam() {
+    window.scrollTo(3600,3600);
+}
+</script>
+
 <script src="{% static 'Home/js/jquery-3.1.1.min.js' %}"></script>
 <script src="{% static 'Home/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'Home/js/owl.carousel.min.js' %}"></script>
